# Embeddings_Transformers_all-MiniLM-L6-v2

./: .gitignore  README.md  b_top5_matches.csv  b_top5_matches.json  c_complex_viz.html  c_simple_viz.html  classmates.csv  data_comparison.py  embeddings.json  embeddings_new.json  hobbies.csv  main.py  model_comparison.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.py  visualizer.ipynb  visualizer.py
