[project]
name = "embeddingsassignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "branca>=0.8.1",
    "matplotlib>=3.10.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pyvis>=0.3.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.4.1",
    "umap-learn>=0.5.7",
    "uv>=0.6.0",
]
